back-end/k8s/first-pod/hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-pair
  labels: 
    app: test-pair
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-pair
  template:
    metadata:
      labels:
        app: test-pair
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 83
      - name: app
        image: marael1701/demo-ci-proj:6efd96b3c229d6fa0c1c4c0268d53e473f82e628
        ports:
        - containerPort: 81
