back-end/k8s/first-pod/app-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: ci-app
 labels:
   run: ci-pp
spec:
 ports:
    - port: 8081
 selector:
   app: ci-app
