back-end/k8s/first-pod/ingress-conf.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ci-app.test
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ci-app
            port:
                  number: 8081
